[gd_scene load_steps=4 format=2]

[ext_resource path="res://HTTPRequest.gd" type="Script" id=1]
[ext_resource path="res://HTTPNews.gd" type="Script" id=2]
[ext_resource path="res://HTTPAddScore.gd" type="Script" id=3]

[node name="World" type="Node2D"]

[node name="HTTPHighScore" type="HTTPRequest" parent="."]
script = ExtResource( 1 )

[node name="ScoreTable" type="Control" parent="HTTPHighScore"]
margin_right = 335.0
margin_bottom = 227.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HTTPHighScore/ScoreTable"]
margin_right = 335.0
margin_bottom = 241.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HTTPHighScore/ScoreTable/Panel"]
margin_top = 10.0
margin_right = 168.0
margin_bottom = 223.0
text = "Name"
align = 1
percent_visible = -0.25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HTTPHighScore/ScoreTable/Panel"]
margin_left = 169.0
margin_top = 10.0
margin_right = 333.0
margin_bottom = 221.0
text = "Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetScore" type="Button" parent="HTTPHighScore"]
margin_left = 3.0
margin_top = 209.0
margin_right = 327.0
margin_bottom = 237.0
text = "Get Scores"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPNews" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="HTTPNews"]
margin_left = 3.0
margin_top = 247.0
margin_right = 703.0
margin_bottom = 547.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HTTPNews/Panel"]
margin_left = 459.0
margin_top = 1.0
margin_right = 697.0
margin_bottom = 36.0
text = "News name"

[node name="Message" type="Label" parent="HTTPNews/Panel"]
margin_left = 383.0
margin_top = 33.0
margin_right = 698.0
margin_bottom = 167.0
text = "Message"
autowrap = true

[node name="TextureRect" type="TextureRect" parent="HTTPNews"]
margin_left = 8.0
margin_top = 254.0
margin_right = 335.0
margin_bottom = 461.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HTTPNews"]
margin_left = 9.0
margin_top = 498.0
margin_right = 689.0
margin_bottom = 539.0
text = "Get News"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPAddScore" type="HTTPRequest" parent="."]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="HTTPAddScore"]
margin_left = 388.0
margin_top = 1.0
margin_right = 701.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="HTTPAddScore/Panel"]
margin_right = 312.0
margin_bottom = 40.0
text = "Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="HTTPAddScore/Panel"]
margin_left = 23.0
margin_top = 42.0
margin_right = 297.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HTTPAddScore/Panel"]
margin_left = 0.840881
margin_top = 84.9305
margin_right = 312.841
margin_bottom = 124.931
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreInput" type="LineEdit" parent="HTTPAddScore/Panel"]
margin_left = 23.0
margin_top = 122.726
margin_right = 297.0
margin_bottom = 161.726
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HTTPAddScore/Panel"]
margin_left = 16.2045
margin_top = 172.0
margin_right = 302.204
margin_bottom = 218.0
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 551.0
margin_right = 993.0
margin_bottom = 591.0
text = "gAPI It is an open source project developed by Zhopio, to access your credentials totally free go to https://gapi-zhopio.herokuapp.com"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HTTPHighScore/GetScore" to="HTTPHighScore" method="_on_GetScore_pressed"]
[connection signal="pressed" from="HTTPNews/Button" to="HTTPNews" method="_on_Button_pressed"]
[connection signal="pressed" from="HTTPAddScore/Panel/Button" to="HTTPAddScore" method="_on_Button_pressed"]
